Remove margin to prevent white space at bottom of page.

--- a/nomad-narratives-frontend/src/styles/SignInUpForm.module.css
+++ b/nomad-narratives-frontend/src/styles/SignInUpForm.module.css
@@ -6,7 +6,6 @@
 	height: 100vh;
 	width: 90vw;
 	border-radius: 6px;
-	margin: 0px 0 50px 0;
 }
 
 .si-bg-image {
